--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch test/*.js",
     "build": "webpack",
     "dev": "webpack serve",
     "deploy": "gh-pages -d dist"
